# group3-hw-JUCE-ASE

./: .gitignore  CMakeLists.txt  OranJam.jucer  README.md
Modules/: CMakeLists.txt
Modules/Filters/: Filters.cpp  Filters.h
Modules/Filters/Source/: HPFilter.cpp  HPFilter.h  LPFilter.cpp  LPFilter.h  PeakFilter.cpp  PeakFilter.h
Modules/Generators/: Generators.cpp  Generators.h
Modules/Generators/Source/: Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  WhiteNoise.cpp  WhiteNoise.h
Modules/Oscillators/: Oscillators.cpp  Oscillators.h
Modules/Oscillators/Source/: MultiWavesOscillator.cpp  MultiWavesOscillator.h
Plugin/: CMakeLists.txt
Plugin/Source/: OranJam.cpp  OranJam.h  ParametersManager.cpp  ParametersManager.h  PluginProcessor.cpp  PluginProcessor.h
Releases/OranJam.app/Contents/: Info.plist
Releases/OranJam.component/Contents/: Info.plist
Releases/OranJam.component/Contents/Resources/: OranJam.rsrc
Releases/OranJam.vst3/Contents/: Info.plist
Resources/: magic.xml
